<resources>
    <string name="app_name">ShoppingList</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop List</string>
    <string name="new_item">New Item</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="color">Color</string>
    <string name="new_list">New list name</string>
    <string name="list_name">list name</string>
    <string name="create_list">Create list</string>
    <string name="delete_item">Do you want delete this item?</string>
    <string name="delete_alert">Delete</string>
    <string name="delete_btn">Delete</string>
    <string name="cancel_btn">Cancel</string>
    <string name="update">Update</string>
    <string name="change_title">Change title</string>
    <string name="empty">Empty</string>
    <string name="name">Name</string>
    <string name="item_info">Item info</string>
    <string name="update_list_item">Update list item</string>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme_settings">Theme settings</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>


</resources>